--- a/frontend/src/components/swipermodules.css
+++ b/frontend/src/components/swipermodules.css
@@ -1,6 +1,8 @@
+@import "swiper/css/free-mode";
 @import "swiper/css/pagination";
 @import "swiper/css/navigation";
 @import "swiper/css";
+
 
 /* Estilos personalizados para el slider */
 .swiper {
@@ -17,12 +19,6 @@
   align-items: center;
 }
 
-.swiper-slide img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
 
 /* Personalización de la paginación */
 .swiper-pagination-bullet {
