--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -36,3 +36,18 @@
   z-index: 9999 !important;
   width: 100% !important;
 }
+
+/* Utilidades para el blog */
+.line-clamp-3 {
+  display: -webkit-box;
+  -webkit-line-clamp: 3;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
+
+.line-clamp-2 {
+  display: -webkit-box;
+  -webkit-line-clamp: 2;
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+}
